# support-desk-agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  config.yml  mcp.json  pyproject.toml  tmp.md
.instructions/: ApprovalAgent.md  KnowledgeRetrieverAgent.md
docs/: agent-detailed-design.md  configuration.md  customer-support-deepagents-design.md  quickstart.md
docs/agents/: approval-agent.md  back-support-escalation-agent.md  back-support-inquiry-writer-agent.md  common.md  compliance-reviewer-agent.md  draft-writer-agent.md  intake-agent.md  investigate-agent.md  knowledge-retriever-agent.md  log-analyzer-agent.md  objective-evaluation-agent.md  objective-evaluator.md  supervisor-agent.md  ticket-update-agent.md
docs/tools/: README.md  approval-tools.md  back-support-escalation-tools.md  back-support-inquiry-writer-tools.md  common.md  compliance-reviewer-tools.md  draft-writer-tools.md  (+6 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
instructions/: ComplianceReviewerSpecialist.md  DraftWriterSpecialist.md  IntakeAgent.md  InvestigationAgent.md  KnowledgeRetrieverSpecialist.md  LogAnalyzerSpecialist.md  ResolutionAgent.md  SuperVisorAgent.md  TicketUpdateAgent.md  common.md  compliance_reviewer.md  draft_writer.md  intake_supervisor.md  investigation_supervisor.md  knowledge_retriever.md  log_analyzer.md  resolution_supervisor.md
tests/: test_agent_factory.py  test_api.py  test_case_id_resolver.py  test_classify_ticket.py  test_cli.py  test_compliance_reviewer.py  test_deep_agent_factory.py  test_draft_writer.py  test_intake_validation.py  test_knowledge_retriever.py  test_log_range_tools.py  test_mcp.py  test_mcp_client.py  test_mcp_manifest.py  test_mcp_overrides.py  test_memory_tools.py  test_objective_evaluator.py  test_reporting.py  test_runtime_mode.py  test_runtime_service.py  test_sample_back_support_escalation_agent.py  test_sample_config.py  test_sample_intake_mcp.py  test_sample_investigate_agent.py  test_sample_runtime_service.py  test_sample_ticket_update_agent.py  test_service_support.py  test_state_model.py  test_state_transitions.py  test_structured_output_utils.py  test_supervisor_agent.py  test_ticket_update_agent.py  test_tool_docs_generator.py  test_tool_registry.py
(+349 files in other folders)
