[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-ope-agents"
version = "0.1.0"
description = "Customer support orchestration PoC built with LangGraph and Deep Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "fastapi>=0.115,<1",
  "uvicorn>=0.32,<1",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "deepagents>=0.0.7",
  "mcp>=1,<2",
  "requests>=2.32,<3",
  "Pillow>=11,<12",
  "PyMuPDF>=1.24,<2",
  "python-docx>=1.1,<2",
  "python-pptx>=1.0,<2",
  "openpyxl>=3.1,<4",
  "pdfminer.six>=20231228",
  "pyzipper>=0.3,<1",
]

[project.scripts]
support-ope-agents = "support_ope_agents.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"support_ope_agents.instructions.defaults" = ["*.md"]